# SleekResearcher

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  langgraph.json  pyproject.toml
src/: run_full_agent_graph.py  run_research_graph.py  run_research_graph_mcp.py  run_scoping_graph.py  run_supervisor_graph.py
src/deep_research/: __init__.py  consts.py  format_utils.py  prompts.py  utils.py
src/deep_research/chains/: __init__.py
src/deep_research/config/: app_config.ini  logging.conf  pdf_styles.css
src/deep_research/graphs/: multi_agent_supervisor.py  research_agent.py  research_agent_full.py  research_agent_mcp.py  research_agent_scope.py
src/deep_research/nodes/: research_compress_research.py  research_llm_call_node.py  research_should_continue_cond_edge.py  research_tool_node.py  scoping_clarification_node.py  scoping_research_brief.py  supervisor_node.py  supervisor_tool_node.py  writer_final_report_gen.py
src/deep_research/states/: state_multi_agent_supervisor.py  state_research.py  state_scope.py
src/deep_research/tools/: __init__.py  search_tools.py
